openturns/1.24/_sources/auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_wingweight.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_wingweight.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_wingweight.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_wingweight.py:


Example of sensitivity analyses on the wing weight model
=========================================================

.. GENERATED FROM PYTHON SOURCE LINES 7-21

This example is a brief overview of the use of the most usual sensitivity analysis techniques and how to call them:

- PCC: Partial Correlation Coefficients
- PRCC: Partial Rank Correlation Coefficients
- SRC: Standard Regression Coefficients
- SRRC: Standard Rank Regression Coefficients
- Pearson coefficients
- Spearman coefficients
- Taylor expansion importance factors
- Sobol' indices
- Rank-based estimation of Sobol' indices
- HSIC : Hilbert-Schmidt Independence Criterion

We present the methods on the :ref:`WingWeight function<use-case-wingweight>` and use the same notations.

.. GENERATED FROM PYTHON SOURCE LINES 24-30

Definition of the model
-----------------------

We load the model from the usecases module.



.. GENERATED FROM PYTHON SOURCE LINES 30-39

.. code-block:: Python

    import openturns as ot
    import openturns.experimental as otexp
    import openturns.viewer as otv
    from openturns.usecases.wingweight_function import WingWeightModel
    from matplotlib import pylab as plt

    ot.Log.Show(ot.Log.NONE)
    m = WingWeightModel()








.. GENERATED FROM PYTHON SOURCE LINES 40-47

Cross cuts of the function
--------------------------

Let's have a look on 2D cross cuts of the wing weight function.
For each 2D cross cut, the other variables are fixed to the input distribution mean values.
This graph allows one to have a first idea of the variations of the function in pair of dimensions.
The colors of each contour plot are comparable.

.. GENERATED FROM PYTHON SOURCE LINES 47-88

.. code-block:: Python


    lowerBound = m.inputDistribution.getRange().getLowerBound()
    upperBound = m.inputDistribution.getRange().getUpperBound()

    nX = ot.ResourceMap.GetAsUnsignedInteger("Evaluation-DefaultPointNumber")
    description = m.inputDistribution.getDescription()
    description.add("")
    m.model.setDescription(description)
    m.model.setName("wing weight model")
    grid = m.model.drawCrossCuts(
        m.inputDistribution.getMean(),
        lowerBound,
        upperBound,
        [nX] * m.model.getInputDimension(),
        False,
        True,
        176.0,
        363.0,
    )
    grid.setTitle("")
    # Get View object to manipulate the underlying figure
    # Here we decide the colormap and the number of levels used for all contours
    view = otv.View(grid, contour_kw={"cmap": "hsv", "levels": 55})

    axes = view.getAxes()
    fig = view.getFigure()
    fig.set_size_inches(12, 12)  # reduce the size

    # Setup a large colorbar
    fig.colorbar(
        view.getSubviews()[1][0].getContourSets()[0], ax=axes[:-2, -1], fraction=0.3
    )
    # Hide unwanted axes labels
    for i in range(len(axes)):
        for j in range(i + 1):
            if i < len(axes) - 1:
                axes[i][j].xaxis.set_ticklabels([])
            if j > 0:
                axes[i][j].yaxis.set_ticklabels([])
    fig.subplots_adjust(top=0.99, bottom=0.05, left=0.06, right=0.99)




.. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_001.png
   :alt: plot sensitivity wingweight
   :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 89-90

We can see that the variables :math:`t_c, N_z, A, W_{dg}` seem to be influent on the wing weight whereas :math:`\Lambda, \ell, q, W_p, W_{fw}` have less influence on the function.

.. GENERATED FROM PYTHON SOURCE LINES 92-96

Data generation
---------------

We create the input and output data for the estimation of the different sensitivity coefficients and we get the input variables description:

.. GENERATED FROM PYTHON SOURCE LINES 96-103

.. code-block:: Python


    inputNames = m.inputDistribution.getDescription()

    size = 500
    inputDesign = m.inputDistribution.getSample(size)
    outputDesign = m.model(inputDesign)








.. GENERATED FROM PYTHON SOURCE LINES 104-106

Let's estimate the PCC, PRCC, SRC, SRRC, Pearson and Spearman coefficients, display and analyze them.
We create a :class:`~openturns.CorrelationAnalysis` model.

.. GENERATED FROM PYTHON SOURCE LINES 106-109

.. code-block:: Python


    corr_analysis = ot.CorrelationAnalysis(inputDesign, outputDesign)








.. GENERATED FROM PYTHON SOURCE LINES 110-113

PCC coefficients
----------------
We compute here PCC coefficients using the :class:`~openturns.CorrelationAnalysis`.

.. GENERATED FROM PYTHON SOURCE LINES 115-118

.. code-block:: Python

    pcc_indices = corr_analysis.computePCC()
    print(pcc_indices)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [0.932231,0.0586894,0.962199,0.0339809,0.0712323,0.313419,-0.945258,0.979635,0.911206,0.347972]#10




.. GENERATED FROM PYTHON SOURCE LINES 122-127

.. code-block:: Python

    graph = ot.SobolIndicesAlgorithm.DrawCorrelationCoefficients(
        pcc_indices, inputNames, "PCC coefficients - Wing weight"
    )
    view = otv.View(graph)




.. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_002.png
   :alt: PCC coefficients - Wing weight
   :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 128-131

PRCC coefficients
-----------------
We compute here PRCC coefficients using the :class:`~openturns.CorrelationAnalysis`.

.. GENERATED FROM PYTHON SOURCE LINES 133-136

.. code-block:: Python

    prcc_indices = corr_analysis.computePRCC()
    print(prcc_indices)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [0.841834,0.0906475,0.905698,-0.0886837,0.0324119,0.194519,-0.85789,0.952103,0.78327,0.259851]#10




.. GENERATED FROM PYTHON SOURCE LINES 137-142

.. code-block:: Python

    graph = ot.SobolIndicesAlgorithm.DrawCorrelationCoefficients(
        prcc_indices, inputNames, "PRCC coefficients - Wing weight"
    )
    view = otv.View(graph)




.. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_003.png
   :alt: PRCC coefficients - Wing weight
   :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 143-146

SRC coefficients
-------------------
We compute here SRC coefficients using the :class:`~openturns.CorrelationAnalysis`.

.. GENERATED FROM PYTHON SOURCE LINES 148-151

.. code-block:: Python

    src_indices = corr_analysis.computeSRC()
    print(src_indices)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [0.330607,0.00756135,0.452011,0.00435775,0.00916598,0.0421007,-0.37103,0.62589,0.283969,0.047756]#10




.. GENERATED FROM PYTHON SOURCE LINES 152-157

.. code-block:: Python

    graph = ot.SobolIndicesAlgorithm.DrawCorrelationCoefficients(
        src_indices, inputNames, "SRC coefficients - Wing weight"
    )
    view = otv.View(graph)




.. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_004.png
   :alt: SRC coefficients - Wing weight
   :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 158-159

Normalized squared SRC coefficients (coefficients are made to sum to 1) :

.. GENERATED FROM PYTHON SOURCE LINES 161-164

.. code-block:: Python

    squared_src_indices = corr_analysis.computeSquaredSRC(True)
    print(squared_src_indices)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [0.117798,6.16188e-05,0.220197,2.04663e-05,9.05465e-05,0.00191026,0.148365,0.422192,0.0869075,0.00245793]#10




.. GENERATED FROM PYTHON SOURCE LINES 165-166

And their associated graph:

.. GENERATED FROM PYTHON SOURCE LINES 168-173

.. code-block:: Python

    graph = ot.SobolIndicesAlgorithm.DrawCorrelationCoefficients(
        squared_src_indices, inputNames, "Squared SRC coefficients - Wing weight"
    )
    view = otv.View(graph)




.. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_005.png
   :alt: Squared SRC coefficients - Wing weight
   :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 177-180

SRRC coefficients
--------------------
We compute here SRRC coefficients using the :class:`~openturns.CorrelationAnalysis`.

.. GENERATED FROM PYTHON SOURCE LINES 182-185

.. code-block:: Python

    srrc_indices = corr_analysis.computeSRRC()
    print(srrc_indices)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [0.32175,0.0188059,0.43917,-0.0183383,0.00668795,0.0406569,-0.343454,0.641792,0.25999,0.0556418]#10




.. GENERATED FROM PYTHON SOURCE LINES 186-191

.. code-block:: Python

    graph = ot.SobolIndicesAlgorithm.DrawCorrelationCoefficients(
        srrc_indices, inputNames, "SRRC coefficients - Wing weight"
    )
    view = otv.View(graph)




.. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_006.png
   :alt: SRRC coefficients - Wing weight
   :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 192-195

Pearson coefficients
-----------------------
We compute here the Pearson :math:`\rho` coefficients using the :class:`~openturns.CorrelationAnalysis`.

.. GENERATED FROM PYTHON SOURCE LINES 197-200

.. code-block:: Python

    pearson_correlation = corr_analysis.computeLinearCorrelation()
    print(pearson_correlation)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [0.364832,0.0891283,0.431528,-0.0521887,-0.00821218,0.0537256,-0.38445,0.679421,0.338223,0.032577]#10




.. GENERATED FROM PYTHON SOURCE LINES 201-207

.. code-block:: Python

    title_pearson_graph = "Pearson correlation coefficients - Wing weight"
    graph = ot.SobolIndicesAlgorithm.DrawCorrelationCoefficients(
        pearson_correlation, inputNames, title_pearson_graph
    )
    view = otv.View(graph)




.. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_007.png
   :alt: Pearson correlation coefficients - Wing weight
   :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_007.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 208-211

Spearman coefficients
-----------------------
We compute here the Spearman :math:`\rho_s` coefficients using the :class:`~openturns.CorrelationAnalysis`.

.. GENERATED FROM PYTHON SOURCE LINES 213-216

.. code-block:: Python

    spearman_correlation = corr_analysis.computeSpearmanCorrelation()
    print(spearman_correlation)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [0.360315,0.0982615,0.420403,-0.0717129,-0.00954906,0.0535819,-0.357029,0.692501,0.319063,0.0410765]#10




.. GENERATED FROM PYTHON SOURCE LINES 217-224

.. code-block:: Python

    title_spearman_graph = "Spearman correlation coefficients - Wing weight"
    graph = ot.SobolIndicesAlgorithm.DrawCorrelationCoefficients(
        spearman_correlation, inputNames, title_spearman_graph
    )
    view = otv.View(graph)
    plt.show()




.. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_008.png
   :alt: Spearman correlation coefficients - Wing weight
   :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_008.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 225-228

The different computed correlation estimators show that the variables :math:`S_w, A, N_z, t_c` seem to be the most correlated with the wing weight in absolute value.
Pearson and Spearman coefficients do not reveal any linear nor monotonic correlation as no coefficients are equal to +/- 1.
Coefficients about :math:`t_c` are negative revealing a negative correlation with the wing weight, that is consistent with the model expression.

.. GENERATED FROM PYTHON SOURCE LINES 232-235

Taylor expansion importance factors
-----------------------------------
We compute here the Taylor expansion importance factors using :class:`~openturns.TaylorExpansionMoments`.

.. GENERATED FROM PYTHON SOURCE LINES 239-240

We create a distribution-based RandomVector.

.. GENERATED FROM PYTHON SOURCE LINES 240-242

.. code-block:: Python

    X = ot.RandomVector(m.inputDistribution)








.. GENERATED FROM PYTHON SOURCE LINES 243-244

We create a composite RandomVector Y from X and m.model.

.. GENERATED FROM PYTHON SOURCE LINES 244-246

.. code-block:: Python

    Y = ot.CompositeRandomVector(m.model, X)








.. GENERATED FROM PYTHON SOURCE LINES 247-248

We create a Taylor expansion method to approximate moments.

.. GENERATED FROM PYTHON SOURCE LINES 248-250

.. code-block:: Python

    taylor = ot.TaylorExpansionMoments(Y)








.. GENERATED FROM PYTHON SOURCE LINES 251-252

We get the importance factors.

.. GENERATED FROM PYTHON SOURCE LINES 252-254

.. code-block:: Python

    print(taylor.getImportanceFactors())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [Sw : 0.130315, Wfw : 2.94004e-06, A : 0.228153, Lambda : 0, q : 8.25053e-05, l : 0.00180269, tc : 0.135002, Nz : 0.412794, Wdg : 0.0883317, Wp : 0.00351621]




.. GENERATED FROM PYTHON SOURCE LINES 255-256

We draw the importance factors

.. GENERATED FROM PYTHON SOURCE LINES 256-260

.. code-block:: Python

    graph = taylor.drawImportanceFactors()
    graph.setTitle("Taylor expansion imporfance factors - Wing weight")
    view = otv.View(graph)




.. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_009.png
   :alt: Taylor expansion imporfance factors - Wing weight
   :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_009.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 261-263

The Taylor expansion importance factors is consistent with the previous estimators as :math:`S_w, A, N_z, t_c` seem to be the most influent variables.
To analyze the relevance of the previous indices, a Sobol' analysis is now carried out.

.. GENERATED FROM PYTHON SOURCE LINES 266-269

Sobol' indices
--------------
We compute the Sobol' indices from both sampling approach and  Polynomial Chaos Expansion.

.. GENERATED FROM PYTHON SOURCE LINES 271-278

.. code-block:: Python

    sizeSobol = 1000
    sie = ot.SobolIndicesExperiment(m.inputDistribution, sizeSobol)
    inputDesignSobol = sie.generate()
    inputNames = m.inputDistribution.getDescription()
    inputDesignSobol.setDescription(inputNames)
    inputDesignSobol.getSize()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    12000



.. GENERATED FROM PYTHON SOURCE LINES 279-280

We see that 12000 function evaluations are required to estimate the first order and total Sobol' indices.

.. GENERATED FROM PYTHON SOURCE LINES 282-283

Then, we evaluate the outputs corresponding to this design of experiments.

.. GENERATED FROM PYTHON SOURCE LINES 285-287

.. code-block:: Python

    outputDesignSobol = m.model(inputDesignSobol)








.. GENERATED FROM PYTHON SOURCE LINES 288-289

We estimate the Sobol' indices with the :class:`~openturns.SaltelliSensitivityAlgorithm`.

.. GENERATED FROM PYTHON SOURCE LINES 291-295

.. code-block:: Python

    sensitivityAnalysis = ot.SaltelliSensitivityAlgorithm(
        inputDesignSobol, outputDesignSobol, sizeSobol
    )








.. GENERATED FROM PYTHON SOURCE LINES 296-297

The `getFirstOrderIndices` and `getTotalOrderIndices` methods respectively return estimates of all first order and total Sobol' indices.

.. GENERATED FROM PYTHON SOURCE LINES 299-301

.. code-block:: Python

    print("First order indices:", sensitivityAnalysis.getFirstOrderIndices())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    First order indices: [0.122469,-0.00124326,0.203427,-0.00142659,-0.00103196,-0.00211806,0.157952,0.404039,0.0702962,0.00109541]#10




.. GENERATED FROM PYTHON SOURCE LINES 302-305

.. code-block:: Python

    print("Total order indices:", sensitivityAnalysis.getTotalOrderIndices())






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Total order indices: [0.12523,-0.00016784,0.252768,-0.000889942,3.35289e-05,0.00290407,0.134847,0.410546,0.0903812,0.00453748]#10




.. GENERATED FROM PYTHON SOURCE LINES 306-307

The `draw` method produces the following graph. The vertical bars represent the 95% confidence intervals of the estimates.

.. GENERATED FROM PYTHON SOURCE LINES 309-313

.. code-block:: Python

    graph = sensitivityAnalysis.draw()
    graph.setTitle("Sobol indices with Saltelli - wing weight")
    view = otv.View(graph)




.. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_010.png
   :alt: Sobol indices with Saltelli - wing weight
   :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_010.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 314-315

We see that several Sobol' indices are negative, that is inconsistent with the theory. Therefore, a larger number of samples is required to get consistent indices

.. GENERATED FROM PYTHON SOURCE LINES 315-334

.. code-block:: Python

    sizeSobol = 10000
    sie = ot.SobolIndicesExperiment(m.inputDistribution, sizeSobol)
    inputDesignSobol = sie.generate()
    inputNames = m.inputDistribution.getDescription()
    inputDesignSobol.setDescription(inputNames)
    inputDesignSobol.getSize()
    outputDesignSobol = m.model(inputDesignSobol)

    sensitivityAnalysis = ot.SaltelliSensitivityAlgorithm(
        inputDesignSobol, outputDesignSobol, sizeSobol
    )

    sensitivityAnalysis.getFirstOrderIndices()
    sensitivityAnalysis.getTotalOrderIndices()

    graph = sensitivityAnalysis.draw()
    graph.setTitle("Sobol indices with Saltelli - wing weight")
    view = otv.View(graph)




.. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_011.png
   :alt: Sobol indices with Saltelli - wing weight
   :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_011.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 335-336

It improves the accuracy of the estimation but, for very low indices, Saltelli scheme is not accurate since several confidence intervals provide negative lower bounds.

.. GENERATED FROM PYTHON SOURCE LINES 338-340

Now, we estimate the Sobol' indices using Polynomial Chaos Expansion.
We create a Functional Chaos Expansion.

.. GENERATED FROM PYTHON SOURCE LINES 340-351

.. code-block:: Python

    sizePCE = 800
    inputDesignPCE = m.inputDistribution.getSample(sizePCE)
    outputDesignPCE = m.model(inputDesignPCE)

    algo = ot.FunctionalChaosAlgorithm(inputDesignPCE, outputDesignPCE, m.inputDistribution)

    algo.run()
    result = algo.getResult()
    print(result.getResiduals())
    print(result.getRelativeErrors())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [0.000336148]
    [3.8961e-08]




.. GENERATED FROM PYTHON SOURCE LINES 352-354

The relative errors are low : this indicates that the PCE model has good accuracy.
Then, we exploit the surrogate model to compute the Sobol' indices.

.. GENERATED FROM PYTHON SOURCE LINES 354-357

.. code-block:: Python

    sensitivityAnalysis = ot.FunctionalChaosSobolIndices(result)
    sensitivityAnalysis






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    FunctionalChaosSobolIndices
    <ul>
      <li>input dimension: 10</li>
      <li>output dimension: 1</li>
      <li>basis size: 761</li>
      <li>mean: [268.064]</li>
      <li>std-dev: [48.0896]</li>
    </ul>
    <table>
      <tr>
        <th>Input</th>
        <th>Variable</th>
        <th>Sobol' index</th>
        <th>Total index</th>
      </tr>
      <tr>
        <td>0</td>
        <td>Sw</td>
        <td>0.124434</td>
        <td>0.127817</td>
      </tr>
      <tr>
        <td>1</td>
        <td>Wfw</td>
        <td>0.000003</td>
        <td>0.000008</td>
      </tr>
      <tr>
        <td>2</td>
        <td>A</td>
        <td>0.220202</td>
        <td>0.226002</td>
      </tr>
      <tr>
        <td>3</td>
        <td>Lambda</td>
        <td>0.000496</td>
        <td>0.000521</td>
      </tr>
      <tr>
        <td>4</td>
        <td>q</td>
        <td>0.000091</td>
        <td>0.000100</td>
      </tr>
      <tr>
        <td>5</td>
        <td>l</td>
        <td>0.001809</td>
        <td>0.001866</td>
      </tr>
      <tr>
        <td>6</td>
        <td>tc</td>
        <td>0.140927</td>
        <td>0.145028</td>
      </tr>
      <tr>
        <td>7</td>
        <td>Nz</td>
        <td>0.411531</td>
        <td>0.419544</td>
      </tr>
      <tr>
        <td>8</td>
        <td>Wdg</td>
        <td>0.085161</td>
        <td>0.087783</td>
      </tr>
      <tr>
        <td>9</td>
        <td>Wp</td>
        <td>0.003364</td>
        <td>0.003388</td>
      </tr>
    </table>
    <table>
      <tr>
        <th>Index</th>
        <th>Multi-index</th>
        <th>Part of variance</th>
      </tr>
      <tr>
        <td>8</td>
        <td>[0,0,0,0,0,0,0,1,0,0]#10</td>
        <td>0.410214</td>
      </tr>
      <tr>
        <td>3</td>
        <td>[0,0,1,0,0,0,0,0,0,0]#10</td>
        <td>0.220052</td>
      </tr>
      <tr>
        <td>7</td>
        <td>[0,0,0,0,0,0,1,0,0,0]#10</td>
        <td>0.138351</td>
      </tr>
      <tr>
        <td>1</td>
        <td>[1,0,0,0,0,0,0,0,0,0]#10</td>
        <td>0.124426</td>
      </tr>
      <tr>
        <td>9</td>
        <td>[0,0,0,0,0,0,0,0,1,0]#10</td>
        <td>0.085110</td>
      </tr>
    </table>

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 358-365

.. code-block:: Python

    firstOrder = [sensitivityAnalysis.getSobolIndex(i) for i in range(m.dim)]
    totalOrder = [sensitivityAnalysis.getSobolTotalIndex(i) for i in range(m.dim)]
    graph = ot.SobolIndicesAlgorithm.DrawSobolIndices(inputNames, firstOrder, totalOrder)
    graph.setTitle("Sobol indices by Polynomial Chaos Expansion - wing weight")
    view = otv.View(graph)





.. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_012.png
   :alt: Sobol indices by Polynomial Chaos Expansion - wing weight
   :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_012.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 366-368

Furthermore, first order Sobol' indices can also been estimated in a data-driven way using a rank-based sensitivity algorithm.
In such a way, the estimation of sensitivity indices does not involve any surrogate model.

.. GENERATED FROM PYTHON SOURCE LINES 368-380

.. code-block:: Python

    sizeRankSobol = 800
    inputDesignRankSobol = m.inputDistribution.getSample(sizeRankSobol)
    outputDesignankSobol = m.model(inputDesignRankSobol)
    myRankSobol = otexp.RankSobolSensitivityAlgorithm(
        inputDesignRankSobol, outputDesignankSobol
    )
    indicesrankSobol = myRankSobol.getFirstOrderIndices()
    print("First order indices:", indicesrankSobol)
    graph = myRankSobol.draw()
    graph.setTitle("Sobol indices by rank-based estimation - wing weight")
    view = otv.View(graph)




.. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_013.png
   :alt: Sobol indices by rank-based estimation - wing weight
   :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_013.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    First order indices: [0.0915021,-0.00687009,0.186473,-0.069346,-0.0426234,-0.0010343,0.168511,0.461969,0.0961888,-0.0160286]#10




.. GENERATED FROM PYTHON SOURCE LINES 381-387

The Sobol' indices confirm the previous analyses, in terms of ranking of the most influent variables.
We also see that five variables have a quasi null total Sobol' indices, that indicates almost no influence on the wing weight.
There is no discrepancy between first order and total Sobol' indices, that indicates no or very low interaction between the variables in the variance of the output.
As the most important variables act only through decoupled first degree contributions, the hypothesis of a linear dependence between the input variables and the weight is legitimate.
This explains why both squared SRC and Taylor give the exact same results even if the first one is based on a :math:`\mathcal{L}^2` linear approximation
and the second one is based on a linear expansion around the mean value of the input variables.

.. GENERATED FROM PYTHON SOURCE LINES 391-393

HSIC indices
------------

.. GENERATED FROM PYTHON SOURCE LINES 395-396

We then estimate the HSIC indices using a data-driven approach.

.. GENERATED FROM PYTHON SOURCE LINES 396-402

.. code-block:: Python

    sizeHSIC = 250
    inputDesignHSIC = m.inputDistribution.getSample(sizeHSIC)
    outputDesignHSIC = m.model(inputDesignHSIC)

    covarianceModelCollection = []








.. GENERATED FROM PYTHON SOURCE LINES 403-409

.. code-block:: Python

    for i in range(m.dim):
        Xi = inputDesignHSIC.getMarginal(i)
        inputCovariance = ot.SquaredExponential(1)
        inputCovariance.setScale(Xi.computeStandardDeviation())
        covarianceModelCollection.append(inputCovariance)








.. GENERATED FROM PYTHON SOURCE LINES 410-411

We define a covariance kernel associated to the output variable.

.. GENERATED FROM PYTHON SOURCE LINES 411-415

.. code-block:: Python

    outputCovariance = ot.SquaredExponential(1)
    outputCovariance.setScale(outputDesignHSIC.computeStandardDeviation())
    covarianceModelCollection.append(outputCovariance)








.. GENERATED FROM PYTHON SOURCE LINES 416-418

In this paragraph, we perform the analysis on the raw data: that is
the global HSIC estimator.

.. GENERATED FROM PYTHON SOURCE LINES 418-420

.. code-block:: Python

    estimatorType = ot.HSICUStat()








.. GENERATED FROM PYTHON SOURCE LINES 421-422

We now build the HSIC estimator:

.. GENERATED FROM PYTHON SOURCE LINES 422-426

.. code-block:: Python

    globHSIC = ot.HSICEstimatorGlobalSensitivity(
        covarianceModelCollection, inputDesignHSIC, outputDesignHSIC, estimatorType
    )








.. GENERATED FROM PYTHON SOURCE LINES 427-428

We get the R2-HSIC indices:

.. GENERATED FROM PYTHON SOURCE LINES 428-432

.. code-block:: Python

    R2HSICIndices = globHSIC.getR2HSICIndices()
    print("\n Global HSIC analysis")
    print("R2-HSIC Indices: ", R2HSICIndices)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


     Global HSIC analysis
    R2-HSIC Indices:  [0.0901435,0.00453049,0.100606,-0.00568149,-0.00407561,-0.000324573,0.0418294,0.333691,0.0425917,0.00360597]#10




.. GENERATED FROM PYTHON SOURCE LINES 433-434

and the HSIC indices:

.. GENERATED FROM PYTHON SOURCE LINES 434-437

.. code-block:: Python

    HSICIndices = globHSIC.getHSICIndices()
    print("HSIC Indices: ", HSICIndices)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    HSIC Indices:  [0.00783686,0.000391741,0.00907897,-0.000506196,-0.000351226,-2.86121e-05,0.00361513,0.0288182,0.00380939,0.000309284]#10




.. GENERATED FROM PYTHON SOURCE LINES 438-439

The p-value by permutation.

.. GENERATED FROM PYTHON SOURCE LINES 439-442

.. code-block:: Python

    pvperm = globHSIC.getPValuesPermutation()
    print("p-value (permutation): ", pvperm)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    p-value (permutation):  [0,0.118812,0,0.90099,0.722772,0.366337,0,0,0.00990099,0.178218]#10




.. GENERATED FROM PYTHON SOURCE LINES 443-444

We have an asymptotic estimate of the value for this estimator.

.. GENERATED FROM PYTHON SOURCE LINES 444-447

.. code-block:: Python

    pvas = globHSIC.getPValuesAsymptotic()
    print("p-value (asymptotic): ", pvas)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    p-value (asymptotic):  [1.24102e-10,0.179293,7.55727e-11,0.886157,0.749896,0.439481,4.00325e-05,9.397e-31,2.92094e-05,0.21761]#10




.. GENERATED FROM PYTHON SOURCE LINES 448-449

We vizualise the results.

.. GENERATED FROM PYTHON SOURCE LINES 449-461

.. code-block:: Python

    graph1 = globHSIC.drawHSICIndices()
    view1 = otv.View(graph1)

    graph2 = globHSIC.drawPValuesAsymptotic()
    view2 = otv.View(graph2)

    graph3 = globHSIC.drawR2HSICIndices()
    view3 = otv.View(graph3)

    graph4 = globHSIC.drawPValuesPermutation()
    view4 = otv.View(graph4)




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_014.png
         :alt: HSIC indices
         :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_014.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_015.png
         :alt: Asymptotic p-values
         :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_015.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_016.png
         :alt: R2-HSIC indices
         :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_016.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_017.png
         :alt: p-values by permutation
         :srcset: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_sensitivity_wingweight_017.png
         :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 462-465

The HSIC indices go in the same way as the other estimators in terms the most influent variables.
The variables :math:`W_{fw}, q, l, W_p` seem to be independent to the output as the corresponding p-values are high.
We can also see that the asymptotic p-values and p-values estimated by permutation are quite similar.

.. GENERATED FROM PYTHON SOURCE LINES 467-468

Reset default settings

.. GENERATED FROM PYTHON SOURCE LINES 468-469

.. code-block:: Python

    ot.ResourceMap.Reload()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 17.723 seconds)


.. _sphx_glr_download_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_wingweight.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_sensitivity_wingweight.ipynb <plot_sensitivity_wingweight.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_sensitivity_wingweight.py <plot_sensitivity_wingweight.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_sensitivity_wingweight.zip <plot_sensitivity_wingweight.zip>`
